crates/convertor/tests/snapshots/url_builder_test__parse_surge_url-3.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: profile_url
---
ConvUrl {
    type: Profile,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "88wW1Vq-k8ffi8eWsfLouIQmLD4Yasouz2xSrxD_qrJmAYhPbtzV8Yjg3hAqwBagySFHyg-TEnFtboUwEVhC4tXgz3nnfatGyfpSHOWTnb8HO07KflQrPD867L5vgcIU8-0",
            client: Surge,
            interval: 86400,
            strict: Some(
                true,
            ),
            proxy_provider_name: None,
            policy: None,
        },
    ),
}
