crates/convertor/tests/snapshots/url_builder_test__parse_surge_url-4.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_urls
---
[
    ConvUrl {
        type: RuleProvider,
        server: Url {
            scheme: "http",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Ipv4(
                    127.0.0.1,
                ),
            ),
            port: Some(
                8080,
            ),
            path: "/",
            query: None,
            fragment: None,
        },
        query: Some(
            ConvQuery {
                server: Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Ipv4(
                            127.0.0.1,
                        ),
                    ),
                    port: Some(
                        8080,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
                sub_url: "-kEIP719vVY4nBzOQkubd0GtBRqTYh1XAqh8Y-rcZZZfleQwVR9d1N_6qOxcCmxEKheEvR2LP6-XGKlB-rOtildiOLEt619sjAnnrB-ofha9da_n2alGfqjJwFFg_RgYQNA",
                client: Surge,
                interval: 86400,
                strict: Some(
                    true,
                ),
                proxy_provider_name: None,
                policy: Some(
                    Policy {
                        name: "DIRECT",
                        option: None,
                        is_subscription: true,
                    },
                ),
            },
        ),
    },
    ConvUrl {
        type: RuleProvider,
        server: Url {
            scheme: "http",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Ipv4(
                    127.0.0.1,
                ),
            ),
            port: Some(
                8080,
            ),
            path: "/",
            query: None,
            fragment: None,
        },
        query: Some(
            ConvQuery {
                server: Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Ipv4(
                            127.0.0.1,
                        ),
                    ),
                    port: Some(
                        8080,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
                sub_url: "m8wxspjY4LmbI43SrzVd9-g5JK6MqoiuXm0if_jTUI6G88nVc5NNPwY09a6RtnXm9qtA3dHbnvn5gIDxoJpeI7I5eZeHrNLcHTMkl1ynrdWnK69KpoMpex6yzVgtmwO_Ddg",
                client: Surge,
                interval: 86400,
                strict: Some(
                    true,
                ),
                proxy_provider_name: None,
                policy: Some(
                    Policy {
                        name: "BosLife",
                        option: None,
                        is_subscription: false,
                    },
                ),
            },
        ),
    },
    ConvUrl {
        type: RuleProvider,
        server: Url {
            scheme: "http",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Ipv4(
                    127.0.0.1,
                ),
            ),
            port: Some(
                8080,
            ),
            path: "/",
            query: None,
            fragment: None,
        },
        query: Some(
            ConvQuery {
                server: Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Ipv4(
                            127.0.0.1,
                        ),
                    ),
                    port: Some(
                        8080,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
                sub_url: "breKfdOlzXbfy_6lUz9KhU8qbMXRTv5iVR6BLzT68iKD7iygfJ9CgOovTJiINx-AHv3gEnlyMaya3FpmPmw8RQeK8qtgy1kMLAPuZLeSO9P3b1Fy8sDd6-p8eW2bO9nvnbo",
                client: Surge,
                interval: 86400,
                strict: Some(
                    true,
                ),
                proxy_provider_name: None,
                policy: Some(
                    Policy {
                        name: "BosLife",
                        option: Some(
                            "no-resolve",
                        ),
                        is_subscription: false,
                    },
                ),
            },
        ),
    },
    ConvUrl {
        type: RuleProvider,
        server: Url {
            scheme: "http",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Ipv4(
                    127.0.0.1,
                ),
            ),
            port: Some(
                8080,
            ),
            path: "/",
            query: None,
            fragment: None,
        },
        query: Some(
            ConvQuery {
                server: Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Ipv4(
                            127.0.0.1,
                        ),
                    ),
                    port: Some(
                        8080,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
                sub_url: "n9PCU_KZCmBk-_hJr-8acNo8Eqayz6Sfkso_hG9GkxHZngLqZuI_qp_d45ausSvAj7vq293ZLm-1yR2QmGf8eALBtbDwjdjhmxQf_Q7WgKYuVxV6f1ACgjWneOlrahnJyDA",
                client: Surge,
                interval: 86400,
                strict: Some(
                    true,
                ),
                proxy_provider_name: None,
                policy: Some(
                    Policy {
                        name: "BosLife",
                        option: Some(
                            "force-remote-dns",
                        ),
                        is_subscription: false,
                    },
                ),
            },
        ),
    },
    ConvUrl {
        type: RuleProvider,
        server: Url {
            scheme: "http",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Ipv4(
                    127.0.0.1,
                ),
            ),
            port: Some(
                8080,
            ),
            path: "/",
            query: None,
            fragment: None,
        },
        query: Some(
            ConvQuery {
                server: Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Ipv4(
                            127.0.0.1,
                        ),
                    ),
                    port: Some(
                        8080,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
                sub_url: "16v06FNRPjiZTp0aNjWn-gyaH0DVPdqNeeflhrrXsF50qE32xG-RmQlnuU8wBpepIvr-QiJdLhIamSEjGsJuuN-QTUSmJe4htiUQgdcaCzD7LL5I8DUmCQaJgLWGHg40LL8",
                client: Surge,
                interval: 86400,
                strict: Some(
                    true,
                ),
                proxy_provider_name: None,
                policy: Some(
                    Policy {
                        name: "DIRECT",
                        option: None,
                        is_subscription: false,
                    },
                ),
            },
        ),
    },
    ConvUrl {
        type: RuleProvider,
        server: Url {
            scheme: "http",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Ipv4(
                    127.0.0.1,
                ),
            ),
            port: Some(
                8080,
            ),
            path: "/",
            query: None,
            fragment: None,
        },
        query: Some(
            ConvQuery {
                server: Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Ipv4(
                            127.0.0.1,
                        ),
                    ),
                    port: Some(
                        8080,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
                sub_url: "6TsiZSfVo_1i3Nvi5gMhKa5LsQptc1w2BbmRIIMhyGg4mtzGaWVRwjYBf3FHgANkp7mmQwzi7FVBSpoAykExmBpd6L2-ua40hUVG2841aO6BygqVFWK6W7gx6fW1Ngwrg6U",
                client: Surge,
                interval: 86400,
                strict: Some(
                    true,
                ),
                proxy_provider_name: None,
                policy: Some(
                    Policy {
                        name: "DIRECT",
                        option: Some(
                            "no-resolve",
                        ),
                        is_subscription: false,
                    },
                ),
            },
        ),
    },
    ConvUrl {
        type: RuleProvider,
        server: Url {
            scheme: "http",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Ipv4(
                    127.0.0.1,
                ),
            ),
            port: Some(
                8080,
            ),
            path: "/",
            query: None,
            fragment: None,
        },
        query: Some(
            ConvQuery {
                server: Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Ipv4(
                            127.0.0.1,
                        ),
                    ),
                    port: Some(
                        8080,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
                sub_url: "VyzZ34rDtonm0HGBMK05dYPt9KOdcmsLYvVDoQEJc09SBD0JaS4MGXMFCx-VoREfqut6DMDnD2irt24fqC0eGcHDwKPnqtgVOIMDAVosDgA2LkLMuxpud7OGSU7lyiBEw0c",
                client: Surge,
                interval: 86400,
                strict: Some(
                    true,
                ),
                proxy_provider_name: None,
                policy: Some(
                    Policy {
                        name: "DIRECT",
                        option: Some(
                            "force-remote-dns",
                        ),
                        is_subscription: false,
                    },
                ),
            },
        ),
    },
]
