crates/convertor/tests/snapshots/url_builder_test__parse_surge_url-6.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_url
---
ConvUrl {
    type: RuleProvider,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "HMjI5J1AHB5XKuVSRusuS-ikX1h7Z1xYYbNGfXXPCyCv9IC6l6sBrOggikALcXx24-b8wf4iLAhgLk4qWpp4pOr5NnwVduRfhqM_PtX07LWZIWkouUHfAZ9oJjZpL_IWBDA",
            client: Surge,
            interval: 86400,
            strict: Some(
                true,
            ),
            proxy_provider_name: None,
            policy: Some(
                Policy {
                    name: "BosLife",
                    option: Some(
                        "no-resolve",
                    ),
                    is_subscription: false,
                },
            ),
        },
    ),
}
