crates/convertor/tests/snapshots/url_builder_test__parse_surge_url-7.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_url
---
ConvUrl {
    type: RuleProvider,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "Mbxy7gTDt6ZrdX3jeYdrg8locOh5WBnuPRWkWTSZ4uCg7hILT0E_SyHheMZINNIdAfedc1OHTYxHYyPwOmauWWwI16_anEcIyDIdXyihKKhQ-bsGMIWchKQTmausI9xfRUc",
            client: Surge,
            interval: 86400,
            strict: Some(
                true,
            ),
            policy: Some(
                Policy {
                    name: "BosLife",
                    option: Some(
                        "force-remote-dns",
                    ),
                    is_subscription: false,
                },
            ),
        },
    ),
}
