crates/convertor/tests/snapshots/url_builder_test__parse_surge_url-8.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_url
---
ConvUrl {
    type: RuleProvider,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "fpBPzIzz7yzfNFq8BR0ugtBeJOlMXqCnd767bVY6teyPVUR8tfZYEq7mYrmV-yBW5PFYGv4gelyJpkiPdYURtXVEMV60EQ_4pQlKM4qBk5PLELZ1cHdSl4pEsGz5E35YNKQ",
            client: Surge,
            interval: 86400,
            strict: Some(
                true,
            ),
            policy: Some(
                Policy {
                    name: "DIRECT",
                    option: None,
                    is_subscription: false,
                },
            ),
        },
    ),
}
