crates/convertor/tests/snapshots/url_builder_test__parse_surge_url-9.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: rule_provider_url
---
ConvUrl {
    type: RuleProvider,
    server: Url {
        scheme: "http",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Ipv4(
                127.0.0.1,
            ),
        ),
        port: Some(
            8080,
        ),
        path: "/",
        query: None,
        fragment: None,
    },
    query: Some(
        ConvQuery {
            server: Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Ipv4(
                        127.0.0.1,
                    ),
                ),
                port: Some(
                    8080,
                ),
                path: "/",
                query: None,
                fragment: None,
            },
            sub_url: "TdQ4U0w2jhYwO1DPLBbgN0sSfJE27eR-fY602W-VRIIqOf2uUnHRe1F8JYTHEY0Y4KwTYhyeTv3N88LGVZ0xoywjnpRJ3Nv3uIU7eL7X8_Rzs6C-UGMFlnrl89L92MtD_MU",
            client: Surge,
            interval: 86400,
            strict: Some(
                true,
            ),
            policy: Some(
                Policy {
                    name: "DIRECT",
                    option: Some(
                        "no-resolve",
                    ),
                    is_subscription: false,
                },
            ),
        },
    ),
}
