crates/convertor/tests/snapshots/url_builder_test__parse_surge_url.snap
---
source: crates/convertor/tests/url_builder_test.rs
expression: original_url
---
ConvUrl {
    type: Original,
    server: Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "convertor.bppleman.com",
            ),
        ),
        port: None,
        path: "/subscription",
        query: Some(
            "token=bppleman&flag=surge",
        ),
        fragment: None,
    },
    query: None,
}
